updated contact form

--- a/snippets/team.html
+++ b/snippets/team.html
@@ -1,4 +1,4 @@
-<div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3">
+<!-- <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3"> -->
     <div class="team-member row row-cols-2">
         <div class="col-4">
             <img src='images/user.jpg' class='member-img'>
@@ -54,4 +54,4 @@
         </div>
     </div> <!-- Team member end -->
     
-</div><!-- Row end -->
+<!-- </div> Row end -->
