--- a/snippets/case-study.html
+++ b/snippets/case-study.html
@@ -100,11 +100,11 @@
     </div>
 </div>
 
-<button class="carousel-control-prev" type="button" data-bs-target="#case-study" data-bs-slide="prev">
+<button id="case-study-prev" class="carousel-control-prev" onclick="cs_prev()" type="button" data-bs-target="#case-study" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
 </button>
-<button class="carousel-control-next" type="button" data-bs-target="#case-study" data-bs-slide="next">
+<button id="case-study-next" class="carousel-control-next" onclick="cs_next()" type="button" data-bs-target="#case-study" data-bs-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
 </button>
