--- a/snippets/case-study.html
+++ b/snippets/case-study.html
@@ -1,110 +1,9 @@
-<div id="case-study-inner" class="carousel-inner">
-    <div class="carousel-item active">
-        <div class="card">
-            <div class="image"></div>
-            <div class="content">
-                <a href="#">
-                    <span class="title">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    </span>
-                </a>
-
-                <p class="desc">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae dolores, possimus pariatur animi temporibus nesciunt praesentium </p>
-
-                <a href="#" class="action">Find out more
-                    <span aria-hidden="true"> → </span>
-                </a>
-            </div>
-        </div>
-    </div>
-
-    <div class="carousel-item">
-        <div class="card">
-            <div class="image"></div>
-            <div class="content">
-                <a href="#">
-                    <span class="title">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    </span>
-                </a>
-
-                <p class="desc">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae dolores, possimus pariatur animi temporibus nesciunt praesentium </p>
-
-                <a href="#" class="action">Find out more
-                    <span aria-hidden="true"> → </span>
-                </a>
-            </div>
-        </div>
-    </div>
-
-    <div class="carousel-item">
-        <div class="card">
-            <div class="image"></div>
-            <div class="content">
-                <a href="#">
-                    <span class="title">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    </span>
-                </a>
-
-                <p class="desc">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae dolores, possimus pariatur animi temporibus nesciunt praesentium </p>
-
-                <a href="#" class="action">Find out more
-                    <span aria-hidden="true"> → </span>
-                </a>
-            </div>
-        </div>
-    </div>
-
-    <div class="carousel-item">
-        <div class="card">
-            <div class="image"></div>
-            <div class="content">
-                <a href="#">
-                    <span class="title">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    </span>
-                </a>
-
-                <p class="desc">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae dolores, possimus pariatur animi temporibus nesciunt praesentium </p>
-
-                <a href="#" class="action">Find out more
-                    <span aria-hidden="true"> → </span>
-                </a>
-            </div>
-        </div>
-    </div>
-
-    <div class="carousel-item">
-        <div class="card">
-            <div class="image"></div>
-            <div class="content">
-                <a href="#">
-                    <span class="title">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    </span>
-                </a>
-
-                <p class="desc">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae dolores, possimus pariatur animi temporibus nesciunt praesentium </p>
-
-                <a href="#" class="action">Find out more
-                    <span aria-hidden="true"> → </span>
-                </a>
-            </div>
-        </div>
+<div class="card">
+    <div class="content">
+        <p class="heading">{{title}}</p>
+        <p class="para">
+            {{desc}}
+        </p>
+        <button class="btn">Learn More</button>
     </div>
 </div>
-
-<button id="case-study-prev" class="carousel-control-prev" onclick="cs_prev()" type="button" data-bs-target="#case-study" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-</button>
-<button id="case-study-next" class="carousel-control-next" onclick="cs_next()" type="button" data-bs-target="#case-study" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-</button>
