--- a/snippets/case-study.html
+++ b/snippets/case-study.html
@@ -4,6 +4,6 @@
         <p class="para">
             {{desc}}
         </p>
-        <button class="btn">Learn More</button>
+        <button class="btn"><a href="{{link}}" target="_blank">Learn More</a></button>
     </div>
 </div>
