--- a/snippets/footer.html
+++ b/snippets/footer.html
@@ -1,8 +1,8 @@
 <div id="footer-container">
     <div id="footer-logo"></div>
     <!-- <a class="contacts" style="grid-area: a;" href="https://wa.me/+917358498262" target="_blank"><i class="bi bi-whatsapp"></i><span> +91 73584 98262</span></a> -->
-    <a class="contacts" style="grid-area: b;" href="mailto:hello@asci.co.in"><i class="bi bi-envelope-at"></i><span> hello@asci.co.in</span></a>
-    <a class="contacts" style="grid-area: c;" href="https://www.linkedin.com/company/applied-science-innovations/" target="_blank"><i class="bi bi-linkedin"></i><span> LinkedIn</span></a>
+    <a class="contacts" style="grid-area: b;" href="mailto:company@mail.com"><i class="bi bi-envelope-at"></i><span> company@mail.com </span></a>
+    <a class="contacts" style="grid-area: c;" href="https://www.linkedin.com/in/akash-kumar-rai-053784228/" target="_blank"><i class="bi bi-linkedin"></i><span> LinkedIn</span></a>
 
     <div id="footer-content" style="grid-area: d;">
         <h3>Services</h3>
